# engram-v3

./: .gitignore  README.md  analyze_results.py  config.yaml  engram.txt  generate_configs.py  generate_configs1.py  generate_configs1_vowels.py  generate_configs2.py  generate_configs2_top20.py  generate_configs2_top20of24.py  generate_configs3_14of24.py  generate_configs3_bottom20of24.py  generate_configs_top20.py  generate_configs_top20_e.py  generate_configs_top20_e_t.py  optimize_layout.py  plots.py  pyproject.toml  run_parallel_optimizations.sh  slurm_batchmaking.sh  slurm_submit_batches.sh
input/: estimated_bigram_scores.csv
